Fix Bug 338188 - sort mails by attachment does not work

FIXED-IN: 4.14
BUG: 338188